# OSR3000-V4.1

./: CMakeLists.txt  sdkconfig
components/AltitudeEstimation/: CMakeLists.txt  altitude.c  altitude.h
components/Fusion/: CMakeLists.txt
components/esp_bmp390/: CMakeLists.txt  README.md  bmp390.c  idf_component.yml  library.json
components/esp_bmp390/include/: bmp390.h  bmp390_version.h
components/esp_littlefs-master/: idf_component.yml
components/esp_type_utils/: idf_component.yml  type_utils.c
components/icm20948-master/: CMakeLists.txt  icm20948.c  icm20948.h  icm20948_i2c.c  icm20948_i2c.h
components/minmea-master/: CMakeLists.txt  minmea.c  minmea.h
main/: CMakeLists.txt  acquire.c  header.c  header.h  main.c  save_send.c
main/sensors/: bmp.c  gps.c  icm.c
partition/: 16MB.csv
